[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://TestingRope2/Anchor1.gd" type="Script" id=2]
[ext_resource path="res://TestingRope2/Test.gd" type="Script" id=3]

[node name="Test" type="Node2D"]
script = ExtResource( 3 )

[node name="platform1" parent="." instance=ExtResource( 1 )]
position = Vector2( 184.999, 177.432 )
initial_speed = 0
acceleration = Vector2( 0, 0 )

[node name="Anchor1" type="Position2D" parent="platform1"]
position = Vector2( 60.965, 12.6134 )
script = ExtResource( 2 )
anchor2 = NodePath("../../platform2/Anchor2")

[node name="platform2" parent="." instance=ExtResource( 1 )]
position = Vector2( 494, 244 )
linear_damp = 5.0
initial_speed = 0
acceleration = Vector2( 0, 0 )

[node name="Anchor3" type="Position2D" parent="platform2"]
position = Vector2( -248.036, -53.9546 )
script = ExtResource( 2 )
anchor2 = NodePath("../../platform1/Anchor1")

[node name="Anchor2" type="Position2D" parent="platform2"]
position = Vector2( 55.4373, 34.4611 )
